# CNN-MarkerDetect

./: CMakeLists.txt  README.md  realtime.cpp  train.cpp  train_torch.cpp  utils.cpp  utils.hpp
